--- a/package.json
+++ b/package.json
@@ -5,13 +5,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx,js,jsx}": [
+      "yarn prettier",
+      "eslint"
+    ]
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.12",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.0",
+    "framer-motion": "^4",
     "next": "12.0.2",
     "postcss": "^8.3.11",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.19"
@@ -19,8 +33,14 @@
   "devDependencies": {
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
+    "next-auth": "^3.29.0",
+    "prettier": "^2.4.1",
     "typescript": "4.4.4"
   }
 }
