--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "lib/*"
       ]
     },
-    "target": "es5",
+    "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
