--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.0",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^4",
     "next": "12.0.2",
     "postcss": "^8.3.11",
