--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-swipeable": "^6.2.0",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
