--- a/package.json
+++ b/package.json
@@ -19,33 +19,47 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@headlessui/react": "^1.4.2",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.0",
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.27.1",
+    "compressorjs": "^1.1.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4",
+    "js-cookie": "^3.0.1",
+    "multer": "^1.4.3",
     "next": "12.0.2",
+    "next-connect": "^0.11.0",
     "postcss": "^8.3.11",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-swipeable": "^6.2.0",
+    "react-toastify": "^8.1.0",
+    "swr": "^1.0.1",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^1.0.17",
     "@hypertheme-editor/chakra-ui": "^0.1.2",
+    "@types/js-cookie": "^3.0.0",
     "@types/node": "16.11.6",
     "@types/react": "17.0.33",
     "@types/tailwindcss": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "axios": "^0.24.0",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
+    "firebase": "^9.4.1",
+    "firebase-admin": "^10.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
-    "next-auth": "^3.29.0",
+    "next-auth": "^4.0.0-beta.7",
     "prettier": "^2.4.1",
     "typescript": "4.4.4"
   }
