feat: set auth protected

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ FACEBOOK_SECRET='b0ffc841ba317ff3718a0e4e4b428714'
 GOOGLE_ID=''
 GOOGLE_SECRET=''
 
+LINE_CHANNEL_ID='1656279283'
+LINE_CHANNEL_SECRET='abc3bf9b962c97e4a75d8aec26e0bf96'
+
 NEXT_PUBLIC_FIREBASE_PROJECT_ID='next-app-db9bd'
 NEXT_PUBLIC_FIREBASE_API_KEY='AIzaSyBP9nDtnPQJQps2PLRxLl_Sg-VyPGvGHl0'
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN='next-app-db9bd.firebaseapp.com'
