--- a/.env.production
+++ b/.env.production
@@ -7,6 +7,7 @@ GOOGLE_SECRET='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'
 LINE_CHANNEL_ID='1655640291'
 LINE_CHANNEL_SECRET='a6ed6563bea4a771ed7b90ec3932132f'
 
+NEXTAUTH_URL='https://next-app-ruofanwei.vercel.app/'
 VERCEL_URL='https://next-app-ruofanwei.vercel.app/'
 NEXT_PUBLIC_FIREBASE_PROJECT_ID='next-app-db9bd'
 NEXT_PUBLIC_FIREBASE_API_KEY='AIzaSyBP9nDtnPQJQps2PLRxLl_Sg-VyPGvGHl0'
