--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lint-staged": "^11.2.6",
     "next-auth": "^4.0.0-beta.7",
     "prettier": "^2.4.1",
+    "react-icons": "^4.3.1",
     "typescript": "4.4.4"
   }
 }
