--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/tailwindcss": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "axios": "^0.24.0",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
