--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "postcss": "^8.3.11",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
+    "quill": "^1.3.7",
+    "quill-delta-to-html": "^0.12.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-loader-spinner": "^4.0.0",
+    "react-quill": "^2.0.0-beta.4",
     "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
     "swr": "^1.0.1",
@@ -48,6 +51,7 @@
     "@hypertheme-editor/chakra-ui": "^0.1.2",
     "@types/js-cookie": "^3.0.0",
     "@types/node": "16.11.6",
+    "@types/quill": "^2.0.9",
     "@types/react": "17.0.33",
     "@types/tailwindcss": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
