--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "17.0.33",
     "@types/tailwindcss": "^2.2.3",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@xstate/react": "^1.6.3",
     "axios": "^0.24.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "7",
@@ -63,9 +64,10 @@
     "firebase-admin": "^10.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.6",
-    "next-auth": "^4.0.0-beta.7",
+    "next-auth": "^4.0.1",
     "prettier": "^2.4.1",
     "react-icons": "^4.3.1",
-    "typescript": "4.4.4"
+    "typescript": "4.4.4",
+    "xstate": "^4.26.1"
   }
 }
