--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "quill-delta-to-html": "^0.12.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-loader-spinner": "^4.0.0",
     "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
