init i18n with react-intl

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,13 @@
         "next/babel"
     ],
     "plugins": [
-        "inline-react-svg"
+        "inline-react-svg",
+        [
+            "formatjs",
+            {
+                "idInterpolationPattern": "[sha512:contenthash:base64:6]",
+                "ast": true
+            }
+        ]
     ]
 }
