--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "dev": "next dev",
     "test": "jest",
-    "build": "next build",
+    "build": "npm run i18n && next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write"
+    "prettier": "prettier '**/*.{js,jsx,ts,tsx}' --write",
+    "extract:i18n": "formatjs extract '{pages,components,sections}/**/*.{js,ts,tsx}' --format simple --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file content/locales/ja.json",
+    "compile:i18n": "formatjs compile-folder --ast --format simple content/locales content/compiled-locales",
+    "i18n": "npm run extract:i18n && npm run compile:i18n"
   },
   "lint-staged": {
     "**/*.{ts,tsx,js,jsx}": [
@@ -46,6 +49,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.20.5",
+    "react-intl": "^5.23.0",
     "react-loader-spinner": "^4.0.0",
     "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
@@ -55,6 +59,7 @@
   "devDependencies": {
     "@chakra-ui/core": "^0.8.0",
     "@chakra-ui/icons": "^1.0.17",
+    "@formatjs/cli": "^4.5.0",
     "@hypertheme-editor/chakra-ui": "^0.1.2",
     "@types/jest": "^27.0.3",
     "@types/js-cookie": "^3.0.0",
@@ -65,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@xstate/react": "^1.6.3",
     "axios": "^0.24.0",
+    "babel-plugin-formatjs": "^10.3.12",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "7",
     "eslint-config-next": "12.0.2",
