--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.20.5",
     "react-intl": "^5.23.0",
     "react-loader-spinner": "^4.0.0",
+    "react-query": "^3.34.5",
     "react-swipeable": "^6.2.0",
     "react-toastify": "^8.1.0",
     "swr": "^1.0.1",
